# # Importar todas las clases de cis_models.py
# from .cis_models import *

# # Importar todas las clases de users.py
# from .users import *

from sqlmodel import SQLModel, Field, Relationship
from typing import List, Optional
from datetime import datetime, timezone
# from models import User

# Modelo de Stage
class StageBase(SQLModel):
    stage_name: str = Field(max_length=50, unique=True, nullable=False)


class Stage(StageBase, table=True):
    stage_id: Optional[int] = Field(default=None, primary_key=True)
    process_stages: List["ProcessStage"] = Relationship(back_populates="stage")


class StageCreate(StageBase):
    pass

# Modelos para la tabla Jobs
class JobBase(SQLModel):
    job_code: str = Field(max_length=50, unique=True, nullable=False)
    status: bool = Field(default=False, nullable=False)
    created_at: Optional[datetime] = Field(default_factory=lambda: datetime.now(timezone.utc))


class Job(JobBase, table=True):
    job_id: Optional[int] = Field(default=None, primary_key=True)
    items: list["Item"] = Relationship(back_populates="job")
    product_id: int = Field(foreign_key="product.product_id", nullable=False)
    product: "Product" = Relationship(back_populates="jobs")
    defect_records: List["DefectRecord"] = Relationship(back_populates="job")

class JobCreate(JobBase):
    client_id: int


class JobUpdate(JobBase):
    pass


# Modelos para la tabla Items
class ItemBase(SQLModel):
    item_name: str = Field(max_length=255, nullable=False)
    espesor: float
    longitud: float
    ancho: float
    alto: float
    volumen: float
    area_superficial: float
    cantidad: int
    material: str = Field(default="Steel")
    ocr: str = Field(max_length=255, nullable=False)



class Item(ItemBase, table=True):
    item_id: Optional[int] = Field(default=None, primary_key=True)
    job_id: int = Field(foreign_key="job.job_id", nullable=False)
    job: Job = Relationship(back_populates="items")
    # Renombrar la relación de "object" a "related_objects"
    related_objects: list["Object"] = Relationship(back_populates="item")
    process_id: int = Field(foreign_key="process.process_id")

    process: "Process" =  Relationship(back_populates="items")


    @property
    def stage_ids(self) -> List[str]:
        """
        Devuelve una lista ordenada de nombres de stages para el proceso asociado con este Item.
        
        Returns:
            List[str]: Lista de nombres de stages ordenados según su orden en el proceso.
        """
        # El proceso está ya vinculado al Item a través de process_id
        # Ordenamos los stages por su orden en el proceso
        ordered_stage_ids = [
            ps.stage.stage_id 
            for ps in sorted(
                self.process.process_stages, 
                key=lambda ps: ps.order
            )
        ]
        return ordered_stage_ids

    @property
    def stage_names(self) -> List[str]:
        """
        Devuelve una lista ordenada de nombres de stages para el proceso asociado con este Item.
        
        Returns:
            List[str]: Lista de nombres de stages ordenados según su orden en el proceso.
        """
        # El proceso está ya vinculado al Item a través de process_id
        # Ordenamos los stages por su orden en el proceso
        ordered_stage_names = [
            ps.stage.stage_name 
            for ps in sorted(
                self.process.process_stages, 
                key=lambda ps: ps.order
            )
        ]
        return ordered_stage_names
    

class ItemCreate(ItemBase):
    job_id: int


class ItemUpdate(ItemBase):
    pass


# Modelos para la tabla Objects
class ObjectBase(SQLModel):
    current_stage: int = Field(foreign_key="stage.stage_id", default=1)
    rework: int = Field(default=0)
    scrap: Optional[int]


class Object(ObjectBase, table=True):
    object_id: Optional[int] = Field(default=None, primary_key=True)
    item_id: int = Field(foreign_key="item.item_id", nullable=False)
    item: Item = Relationship(back_populates="related_objects")

        

class ObjectCreate(ObjectBase):
    item_id: int


class ObjectUpdate(ObjectBase):
    pass


class ObjectDetails(SQLModel):
    item_name: str
    stage_name: str
    count: int


class JobObjectsResponse(SQLModel):
    job_code: str
    objects: List[ObjectDetails]


# Tabla intermedia ProcessStage
class ProcessStage(SQLModel, table=True):
    __tablename__ = "process_stage"
    id: Optional[int] = Field(default=None, primary_key=True)
    process_id: int = Field(foreign_key="process.process_id", nullable=False)
    stage_id: int = Field(foreign_key="stage.stage_id", nullable=False)
    order: int = Field(nullable=False)  # Orden dentro del proceso

    process: "Process" = Relationship(back_populates="process_stages")
    stage: "Stage" = Relationship(back_populates="process_stages")
    

# Modelo de Process
class ProcessBase(SQLModel):
    process_name: str = Field(max_length=50, unique=True, nullable=False)


class Process(ProcessBase, table=True):
    process_id: Optional[int] = Field(default=None, primary_key=True)
    process_stages: List[ProcessStage] = Relationship(back_populates="process")
    items: List["Item"] = Relationship(back_populates="process")  # Relación con Item


class ProcessCreate(ProcessBase):
    pass


class ProcessUpdate(ProcessBase):
    pass

class ProcessResponse(ProcessBase):
    process_id: int
    process_name: str

class ItemStageStatus(SQLModel):
    item_name: str
    item_ocr: str
    ratio :str
    status: bool

class StageStatus(SQLModel):
    stage_name: str
    items: List[ItemStageStatus]

class JobStatus(SQLModel):
    job_code: str
    stages: List[StageStatus]

# --- Product ---
class ProductBase(SQLModel):
    product_name: str = Field(max_length=255, nullable = False)

class Product(ProductBase, table = True):
    product_id: Optional[int] = Field(default = None, primary_key = True)
    defect_records: List["DefectRecord"] = Relationship(back_populates= "product")
    jobs: List["Job"] = Relationship(back_populates="product")

class ProductCreate(ProductBase):
    pass

# --- Issue ---
class IssueBase(SQLModel):
    issue_description: str = Field(max_length=255, nullable=False)

class Issue(IssueBase, table=True):
    issue_id: Optional[int] = Field(default=None, primary_key=True)
    process_id: int = Field(foreign_key="process.process_id", nullable=False)
    defect_records: List["DefectRecord"] = Relationship(back_populates="issue")

class IssueCreate(IssueBase):
    process_id: int

class IssueUpdate(IssueBase):
    process_id: Optional[int]  # Optional if you want to allow changing the process association

class IssueResponse(IssueBase):
    issue_id: int
    process_id: int  # Include the process association in the response


# --- Status ---
class StatusBase(SQLModel):
    status_name: str = Field(max_length=50, unique=True, nullable=False)

class Status(StatusBase, table=True):
    status_id: Optional[int] = Field(default=None, primary_key=True)
    defect_records: List["DefectRecord"] = Relationship(back_populates="status")

class StatusCreate(StatusBase):
    pass

# --- Correction Process ---
class CorrectionProcessBase(SQLModel):
    correction_process_description: str = Field(max_length=255, nullable=False)

class CorrectionProcess(CorrectionProcessBase, table=True):
    __tablename__ = "correction_process"
    correction_process_id: Optional[int] = Field(default=None, primary_key=True)
    defect_records: List["DefectRecord"] = Relationship(back_populates="correction_process")

class CorrectionProcessCreate(CorrectionProcessBase):
    pass

# --- Image Type ---
class ImageTypeBase(SQLModel):
    type_name: str = Field(max_length=50, unique=True, nullable=False)

class ImageType(ImageTypeBase, table=True):
    __tablename__ = "image_type"
    image_type_id: Optional[int] = Field(default=None, primary_key=True)
    defect_images: List["DefectImage"] = Relationship(back_populates="image_type")

class ImageTypeCreate(ImageTypeBase):
    pass


#==================================#
# --- Defect Record ---
#==================================#

class DefectRecordBase(SQLModel):
    """
    Clase base para registros de defectos que contiene todos los campos comunes
    """
    product_id: int = Field(foreign_key="product.product_id")
    job_id: int = Field(foreign_key="job.job_id")
    process_id: int = Field(foreign_key="process.process_id")
    inspector_user_id: int = Field(foreign_key="user.user_id")
    issue_by_user_id: int = Field(foreign_key="user.user_id")
    issue_id: int = Field(foreign_key="issue.issue_id")
    correction_process_id: int = Field(foreign_key="correction_process.correction_process_id")
    status_id: int = Field(foreign_key="status.status_id")
    date_closed: Optional[datetime] = Field(default=None)
    date_opened: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))


class DefectRecord(DefectRecordBase, table=True):
    """
    Modelo de tabla para registros de defectos
    """
    __tablename__ = "defect_record"
    defect_record_id: Optional[int] = Field(default=None, primary_key=True)
    
    # Relaciones
    product: "Product" = Relationship(back_populates="defect_records")
    job: "Job" = Relationship(back_populates="defect_records")
    inspector: "User" = Relationship(back_populates="inspected_defects",sa_relationship_kwargs={"foreign_keys": "DefectRecord.inspector_user_id"})
    issue_by_user: "User" = Relationship(back_populates="user_defects",sa_relationship_kwargs={"foreign_keys": "DefectRecord.issue_by_user_id"})
    issue: "Issue" = Relationship(back_populates="defect_records")
    correction_process: "CorrectionProcess" = Relationship(back_populates="defect_records")
    status: "Status" = Relationship(back_populates="defect_records")
    images: List["DefectImage"] = Relationship(back_populates="defect_record")

class DefectRecordCreate(DefectRecordBase):
    """
    Esquema para la creación de registros de defectos
    """
    pass



class DefectRecordUpdate(SQLModel):
    """
    Esquema para actualización parcial de registros de defectos
    """
    date_closed: Optional[datetime] = None
    product_id: Optional[int] = None
    job_id: Optional[int] = None
    process_id: Optional[int] = None
    inspector_user_id: Optional[int] = None
    issue_by_user_id: Optional[int] = None
    issue_id: Optional[int] = None
    correction_process_id: Optional[int] = None
    status_id: Optional[int] = None
    description: Optional[str] = None

class DefectRecordRead(DefectRecordBase):
    defect_record_id: int
    date_opened: datetime
    date_closed: Optional[datetime]

#==================================#
# --- Defect Image ---
#==================================#
class DefectImageBase(SQLModel):
    image_url: str = Field(max_length=255, nullable=False)

class DefectImage(DefectImageBase, table=True):
    __tablename__ = "defect_image"
    defect_image_id: Optional[int] = Field(default=None, primary_key=True)
    defect_record_id: int = Field(foreign_key="defect_record.defect_record_id")
    image_type_id: int = Field(foreign_key="image_type.image_type_id")
    
    # Relaciones
    defect_record: DefectRecord = Relationship(back_populates="images")
    image_type: ImageType = Relationship(back_populates="defect_images")

class DefectImageCreate(DefectImageBase):
    defect_record_id: int
    image_type_id: int


from sqlmodel import SQLModel, Field, Relationship
from typing import Optional, List
from datetime import datetime, timezone
from pydantic import EmailStr, FieldValidationInfo, field_validator
from sqlmodel import Field, Relationship, SQLModel, Session, select
from models import DefectRecord

class BaseRole(SQLModel):
    role_name: str = Field(unique=True)

class CreateRole(BaseRole):
    pass

class Role(BaseRole, table=True):
    role_id: Optional[int] = Field(default=None, primary_key=True)
    users: list["User"] = Relationship(back_populates="role")


class Token(SQLModel):
    access_token: str
    token_type: str


class TokenData(SQLModel):
    username: Optional[str] = None


class BaseUser(SQLModel):
    employee_number: int = Field(unique=True, nullable=False)
    username: str = Field(max_length=50, unique=True, nullable=False)
    email: str = Field(max_length=255, nullable=False)
    first_name: str = Field(max_length=50)
    middle_name: Optional[str] = Field(max_length=50, default=None)
    first_surname: str = Field(max_length=50)
    second_surname: Optional[str] = Field(max_length=50, default=None)
    hashed_password: str = Field(max_length=255, nullable=False)
    is_active: bool = Field(default=True)
    created_at: Optional[datetime] = Field(default_factory=lambda: datetime.now(timezone.utc))
    updated_at: Optional[datetime] = Field(default=None)
    deleted_at: Optional[datetime] = Field(default=None)

class CreateUser(BaseUser):
    role_id: int = Field(foreign_key="role.role_id", nullable=False)
    password: str = Field(nullable=False)

class User(BaseUser, table=True):
    __tablename__ = "user"
    user_id: Optional[int] = Field(default=None, primary_key=True)
    hashed_password: str = Field(nullable=False)
    is_active: bool = Field(default=True)
    created_at: datetime = Field(default_factory=lambda: datetime.now(timezone.utc))
    updated_at: Optional[datetime] = Field(default=None)
    deleted_at: Optional[datetime] = Field(default=None)
    role_id: int = Field(foreign_key="role.role_id", nullable=False)
    role: Role = Relationship(back_populates="users")

    # Relaciones con DefectRecord
    inspected_defects: List["DefectRecord"] = Relationship(
        back_populates="inspector",
        sa_relationship_kwargs={"foreign_keys": "DefectRecord.inspector_user_id"}
    )
    user_defects: List["DefectRecord"] = Relationship(
        back_populates="issue_by_user",
        sa_relationship_kwargs={"foreign_keys": "DefectRecord.issue_by_user_id"}
    )

    def update_timestamps(self):
        self.updated_at = datetime.now(timezone.utc)


class ResponseUser(SQLModel):
    user_id: int
    employee_number: int
    username: str
    email: EmailStr
    first_name: str
    first_surname: str
    role: Role
    is_active: bool
    created_at: datetime

class UpdateUserRequest(SQLModel):
    username: Optional[str] = None
    email: Optional[EmailStr] = None
    first_name: Optional[str] = None
    first_surname: Optional[str] = None
    password: Optional[str] = None
    role_id: Optional[int] = None
    is_active: Optional[bool] = None
    

# Modelos para el flujo
class ForgetPasswordRequest(SQLModel):
    email: str = Field(nullable=False)

class ResetPasswordRequest(SQLModel):
    token: str = Field(nullable=False)
    new_password: str = Field(nullable=False)
    confirm_password: str = Field(nullable=False)